# Nosedive_Trading

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  BIG_PICTURE.md  CLAUDE.md  README.md  TARGET.md  justfile  pyproject.toml
apps/frontend/: README.md  pyproject.toml
apps/frontend/src/algotrading/frontend/: __init__.py  __main__.py  app.py  assistant_prompt.py  (+23 more)
apps/frontend/tests/: conftest.py  test_analytics_api.py  test_analytics_rate_curve.py  test_assistant_api.py  test_assistant_structured.py  test_attribution_api.py  test_backtest_api.py  test_basket_api.py  test_basket_scenarios.py  test_basket_scenarios_api.py  test_booking_api.py  test_compose_decorrelation_api.py  test_config_api.py  test_constituents_api.py  test_coverage_api.py  test_demo_book.py  test_demo_populate.py  test_envfile.py  test_frontend_ts_contract.py  test_guide_api.py  test_health_api.py  test_ibkr_router.py  test_indices_api.py  test_market_api.py  test_oauth_api.py  test_onglet1_contracts.py  test_onglet2_contracts.py  test_openrouter_client.py  test_orders_api.py  test_positions_api.py  test_price_history_api.py  test_readback_api.py  test_realized_attribution_api.py  test_reconciliation_api.py  test_recorded_dates_api.py  test_risk_api.py  test_run_api.py  test_run_job_stages.py  test_signals_api.py  test_store_api.py  (+3 more)
apps/frontend/tests/golden/: positions_book.json  regenerate_positions_book.py
apps/frontend/web/: .gitignore  .prettierignore  CONTRIBUTING.md  components.json  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  start.sh  tsconfig.json  vite.config.ts
apps/frontend/web/e2e/: action-feedback.spec.ts  assistant-ui.spec.ts  basket-flow.spec.ts  basket-onglet2.spec.ts  charts.spec.ts  guidance.spec.ts  helpers.ts  layout.spec.ts  market-read-flow.spec.ts  market.spec.ts  mock-bff.ts  navigation.spec.ts  onglet1-read-flow.spec.ts  operations.spec.ts  pages.spec.ts  positions.spec.ts  risk-scenarios.spec.ts  scorecards.spec.ts  signals.spec.ts  strategy.spec.ts
apps/frontend/web/eslint-rules/: no-raw-spacing.js
apps/frontend/web/scripts/: diag-assistant-launcher.mjs  diag-candle-legend.mjs  diag-final-verify.mjs  diag-gap-census.mjs  diag-greeks-spike.mjs  diag-marimo.mjs  diag-pm-views.mjs  diag-surface-fit-header.mjs  diag-tour-guide.mjs  diag-tour-verify.mjs  diag-vol-side-selectors.mjs  diag.mjs  gen-contract-fixtures.mjs
apps/frontend/web/src/: App.test.tsx  App.tsx  api.contract.test.ts  api.test.ts  api.ts  basketTemplates.test.ts  basketTemplates.ts  index.css  main.tsx  routes.ts  stressApi.ts
backend/: README.md  pyproject.toml
backend/scripts/: ibkr_live_smoke.py  sample_day.py  vol_surface.py
backend/src/actor/: README.md  __init__.py  driver.py  outputs.py  stamping.py  valuation_join.py
backend/src/collectors/: README.md  __init__.py  collector.py  errors.py  normalization.py  notices.py  replay.py  summary.py
backend/src/config/: README.md  __init__.py  loader.py  platform_config.py
backend/src/connectivity/: README.md  __init__.py  broker.py  clock.py  errors.py  ibkr_session.py  sessions.py  supervisor.py
backend/src/contracts/: README.md  __init__.py  errors.py  instrument_key.py  registry.py  tables.py  validation.py
backend/src/fixtures/: README.md  events.py  library.py  positions.py  quotes.py  records.py  synthetic.py
backend/src/forwards/: README.md  __init__.py  estimate.py  parity.py
backend/src/frontend/: README.md  __init__.py  __main__.py  app.py  context.py  oauth_state.py  providers.py  runner.py  serializers.py
backend/src/frontend/routers/: __init__.py  config.py  health.py  oauth.py  run.py
backend/src/iv/: README.md  __init__.py  solver.py
backend/src/orchestration/: README.md  __init__.py  alerts.py  dashboard.py  jobs.py  pipeline.py  qc_job.py  run_state.py  storage_root.py  surface_job.py
backend/src/orchestration/reconstruction/: README.md  __init__.py  batch.py  comparison.py  report.py
backend/src/pricing/: README.md  __init__.py  engine.py  state.py
backend/src/provenance/: README.md  __init__.py  stamp.py
backend/src/qc/: README.md  __init__.py  checks.py  errors.py  report.py  result.py  thresholds.py
backend/src/risk/: README.md  __init__.py  aggregate.py  bumps.py  greeks.py  reconciliation.py  scenario.py  valuation.py
backend/src/snapshots/: README.md  __init__.py  as_of.py  builder.py  quote_quality.py
backend/src/storage/: README.md  __init__.py  adapter.py  errors.py  partitioning.py  schema.py  serialization.py
backend/src/surfaces/: README.md  __init__.py  arbitrage.py  fit.py  reporting.py
backend/src/universe/: README.md  __init__.py  chain_planning.py  normalization.py  service.py
backend/src/validation/: README.md  __init__.py  anomaly.py  engine.py  state.py  triage.py
backend/tests/: test_actor.py  test_anomaly.py  test_chain_planning.py  test_collectors.py  test_config.py  test_connectivity.py  test_contract_validation.py  test_coverage_edges.py  test_determinism_analytics.py  test_determinism_risk.py  test_fixtures.py  test_forwards.py  test_frontend_api.py  test_handover_e2e.py  test_ibkr_session.py  test_iv.py  test_market_data_policy.py  test_orchestration.py  test_pricing.py  test_pricing_properties.py  test_provenance.py  test_provenance_verification.py  test_qc_checks.py  test_qc_report.py  test_replay_byte_identical.py  test_replay_reconstruction.py  test_risk.py  test_risk_properties.py  test_scenario.py  test_seam_analytics.py  test_seam_market_data.py  test_seam_risk.py  test_smoke_bootstrap.py  test_snapshots.py  test_storage.py  test_surface_job.py  test_surface_reporting.py  test_surfaces.py  test_surfaces_projection.py  test_triage.py  (+3 more)
backend/tests/golden/: analytics_pipeline.json  risk_pf_risk.json
backend/web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/web/src/: api.ts
backend/web/src/pages/: Config.tsx  Health.test.tsx  Health.tsx  Home.tsx  Surfaces.test.tsx
backend/web/src/test/: setup.ts
(+768 files in other folders)
