[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "duckdb>=1.5.3",
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "prometheus-client>=0.25.0",
    "py-vollib>=1.0.12",
    "pyarrow>=24.0.0",
    "pytz>=2026.2",
    "quantlib>=1.42.1",
    "scipy>=1.17.1",
    "structlog>=25.5.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

# --- Quality gate configuration -------------------------------------------
# The full gate is: uv run ruff check . && uv run mypy . && uv run pytest -q
# Top-level packages live under src/; pythonpath/mypy_path make
# `from contracts import ...` resolve without an editable install step.

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["duckdb.*", "pyarrow.*"]
ignore_missing_imports = true

# Workstream C pricing/IV/surface libraries ship no type stubs.
[[tool.mypy.overrides]]
module = ["QuantLib.*", "scipy.*", "vollib.*", "py_vollib.*", "py_lets_be_rational.*"]
ignore_missing_imports = true

# Workstream E orchestration scheduler ships no type stubs (structlog and
# prometheus_client are typed; apscheduler 3.x is not).
[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

# --- Coverage floor on the pure-function core (tasks/TESTING.md) -----------
# C's analytics core carries *branch* coverage at or above a committed floor.
# Run the coverage gate over the full suite with:
#     uv run pytest --cov
# which reads the source list and branch flag below and exits non-zero if total
# branch coverage drops under `fail_under`. Deliberately kept out of the default
# `pytest -q` gate: a targeted single-file run during TDD covers only its own
# module and would otherwise trip the whole-core threshold and read as a failure.
# The floor starts at 90 and only ever rises (TESTING.md) — raise it as the core
# fills in, never lower it to make a run pass. D adds `src/risk` to `source` on
# its own branch; the dir does not exist here, so listing it now would error.
[tool.coverage.run]
branch = true
source = ["src/forwards", "src/iv", "src/pricing", "src/risk", "src/snapshots", "src/surfaces"]

[tool.coverage.report]
fail_under = 90
show_missing = true
precision = 1
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
    "if __name__ == .__main__.:",
]
