[project]
name = "algotrading-frontend"
version = "0.1.0"
description = "Cross-package app: FastAPI BFF + React/Vite web. Owner: M8. Top of the layer stack."
requires-python = ">=3.13"
dependencies = [
    "algotrading-infra",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "instructor>=1.7.0",
    "openai>=1.59.0",
    "pydantic>=2.12.5",
    "structlog>=24.0.0",
    "uvicorn>=0.48.0",
]

[tool.uv.sources]
algotrading-infra = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/algotrading"]
